@@ -171,3 +171,4 @@
   8-Oct-2019  V0.77 Upversion schema after successful build
  14-Oct-2019  V0.78 Add support for sequence isoforms, entry molecular weight, turn off SIFTS for
                     references and alignments,  and various schema adjusts.
+ 14-Oct-2019  V0.79 Add test cases and fix exceptions for missing sequence difference details.
